--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,4 +1,12 @@
-log4j.rootLogger=ERROR, stdout
+log4j.rootLogger=ERROR,A1,stdout
+
+#\u63A7\u5236\u53F0
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%5p [%t] - %m%n
+log4j.appender.stdout.layout.ConversionPattern=[%-5p] %-40m [%x] %l%n
+
+#\u6587\u4EF6
+log4j.appender.A1=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.A1.File=rh.log
+log4j.appender.A1.layout=org.apache.log4j.PatternLayout
+log4j.appender.A1.layout.ConversionPattern=[%-5p] %-40m [%x] [%l]%d%n
