--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <spring.version>5.0.3.RELEASE</spring.version>
     <mybatis.version>3.4.4</mybatis.version>
+    <ehcache.version>2.10.2</ehcache.version>
   </properties>
   <dependencies>
     <!-- 单元测试 -->
@@ -26,6 +27,12 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+    </dependency>
+    <!-- Ehcache 缓存 -->
+    <dependency>
+      <groupId>net.sf.ehcache</groupId>
+      <artifactId>ehcache</artifactId>
+      <version>${ehcache.version}</version>
     </dependency>
     <!-- 第一部分：Spring 配置-->
     <!-- Spring core -->
